tools/vendor/pin-project/tests/ui/pin_project/packed_sneaky-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> tests/ui/pin_project/packed_sneaky-1.rs:9:15
  |
9 | #[hidden_repr(packed)]
  |               ^^^^^^

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> tests/ui/pin_project/packed_sneaky-1.rs:15:1
   |
15 | #[hidden_repr2]
   | ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `hidden_repr2` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> tests/ui/pin_project/packed_sneaky-1.rs:23:15
   |
23 | #[hidden_repr(packed)]
   |               ^^^^^^

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> tests/ui/pin_project/packed_sneaky-1.rs:32:15
   |
32 | #[hidden_repr(packed)]
   |               ^^^^^^
